# tensorquick

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: prod-publish.yml  test-publish.yml
tensorquick/: compile_resources.py  image.qrc  main.py  rc_image.py
tensorquick/backend/: builder.py  clipboard.py  image_provider.py  pipeline.py  settings.py  types.py
tensorquick/config/: __init__.py  default.yaml
tensorquick/scripts/deploy/: flux-1-dev.py  flux-1-schnell.py  mochi.py  stable-diffusion-xl.py
tensorquick/ui/: Main.qml
tensorquick/ui/app/: ImageDisplay.qml  Inference.qml  InputField.qml  TextWarning.qml  Training.qml
tensorquick/ui/settings/: SettingsModal.qml  Sidebar.qml
tensorquick/ui/settings/content/: About.qml  ContentModel.qml  ContentShortcut.qml  CurrentModel.qml  DeployedModels.qml  ModelGallery.qml
tensorquick/ui/shared/: ConfirmDialog.qml  ControlButton.qml  MacOSGroupBox.qml  PrimaryButton.qml  Spinner.qml
tensorquick/utils/: general.py  shortcut.py
